prod/k8s/old/reports1/reports-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reporting-service
  #namespace: default  
  annotations:
    # https://github.com/ubuntu/microk8s/issues/2035
    kubernetes.io/ingress.class: public # was 'nginx' before microk8s 1.20
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
  - hosts: 
    - reports11
    # secret must be in same namespace
    secretName: tls-credential
  rules:
  - host: reports11
    http:
      paths:
      - pathType: Prefix
        path: "/report"
        backend:
          service:
            name: reporting-service
            port:
              number: 5000
      - pathType: Prefix
        path: "/report_list"
        backend:
          service:
            name: reporting-service
            port:
              number: 5000              
      - pathType: Prefix
        path: "/hotel"
        backend:
          service:
            name: reporting-service
            port:
              number: 5000
